# RAG-Against-the-machine

./: .gitignore  Makefile  README.md  notes.txt  pyproject.toml  test.py
data/output/search_results/: dataset_code_public.json  dataset_docs_public.json
data/processed/: embeddings_meta.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
src/student/: __main__.py  cli.py  models.py
src/student/evaluation/: evaluator.py
src/student/generation/: answerer.py
src/student/ingestion/: IngestationManager.py  chunker.py  indexer.py  reader.py
src/student/retrieval/: __init__.py  embedding_indexer.py  query_expander.py  searcher.py
