[project]
name = "rag"
version = "0.1.0"
description = "RAG pipeline over vLLM documentation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25>=0.3.8",
    "fire",
    "numpy>=2.2.6",
    "pydantic",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[project.scripts]
student = "student.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/student"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]
